--- a/packages/sc-mongodbcluster/compositions/mongodbcluster/test/scenarios/standard/claim.yaml
+++ b/packages/sc-mongodbcluster/compositions/mongodbcluster/test/scenarios/standard/claim.yaml
@@ -18,7 +18,7 @@ spec:
       name: my-ca-bundle
       key: my-ca-bundle.pem
       namespaces:
-        - env
+        - env1
         - env2
     consumerAppsExternalServices:
       - ttk-mongodb-svc
