--- a/packages/sc-mysqlcluster/compositions/mysqlcluster/resources/definition.yaml
+++ b/packages/sc-mysqlcluster/compositions/mysqlcluster/resources/definition.yaml
@@ -351,6 +351,10 @@ spec:
                   backup:
                     type: object
                     properties:
+                      enabled:
+                        type: boolean
+                        description: Enable backup for PXC
+                        default: false
                       image:
                         type: string
                         description: Backup image
