--- a/packages/sc-mysqlcluster/compositions/mysqlcluster/resources/definition.yaml
+++ b/packages/sc-mysqlcluster/compositions/mysqlcluster/resources/definition.yaml
@@ -377,6 +377,22 @@ spec:
                         type: boolean
                         description: Enable backup for PXC
                         default: false
+                      backuptype:
+                        type: string
+                        description: Type of backup (e.g., s3, pvc)
+                        default: s3
+                      objectStoreProvider:
+                        type: string
+                        description: Object store provider for backup
+                        default: s3
+                      forceDestroy:
+                        type: boolean
+                        description: Force destroy for S3 bucket when not empty
+                        default: false
+                      deletionPolicy:
+                        type: string
+                        description: Deletion policy for S3 bucket
+                        default: Delete
                       image:
                         type: string
                         description: Backup image
