--- a/packages/sc-mongodbcluster/compositions/mongodbcluster/resources/definition.yaml
+++ b/packages/sc-mongodbcluster/compositions/mongodbcluster/resources/definition.yaml
@@ -334,6 +334,22 @@ spec:
                     properties:
                       enabled:
                         type: boolean
+                      backuptype:
+                        type: string
+                        description: Type of backup (e.g., s3, pvc)
+                        default: s3
+                      objectStoreProvider:
+                        type: string
+                        description: Object store provider for backup
+                        default: s3
+                      forceDestroy:
+                        type: boolean
+                        description: Force destroy for S3 bucket when not empty
+                        default: false
+                      deletionPolicy:
+                        type: string
+                        description: Deletion policy for S3 bucket
+                        default: Delete
                       image:
                         type: string
                       verifyTLS:
