fix: Include PostgreSQL backup

--- a/packages/sc-pgcluster/compositions/pgcluster/resources/definition.yaml
+++ b/packages/sc-pgcluster/compositions/pgcluster/resources/definition.yaml
@@ -136,6 +136,10 @@ spec:
                     type: object
                     description: Backup configuration
                     properties:
+                      enabled:
+                        type: boolean
+                        description: Enable backup.
+                        default: false
                       image:
                         type: string
                         description: Image used for pgbackrest
@@ -143,12 +147,27 @@ spec:
                         type: string
                       bucket:
                         type: string
+                      forceDestroy:
+                        type: boolean
+                        description: Force destroy the bucket.
+                        default: false
+                      deletionPolicy:
+                        type: string
+                        description: Deletion policy for the bucket.
+                        default: Delete
                       bucketRegion:
                         type: string
                       fullBackupCronSchedule:
                         type: string
                       differentialBackupCronSchedule:
                         type: string
+                      credentialsSecret:
+                        type: string
+                        description: S3 credentials secret name.
+                      endpointUrl:
+                        type: string
+                        description: S3 endpoint URL.
+
                   proxy:
                     type: object
                     description: Proxy configuration for PgBouncer
