--- a/packages/utils/compositions/bucket-secret/resources/definition.yaml
+++ b/packages/utils/compositions/bucket-secret/resources/definition.yaml
@@ -94,3 +94,8 @@ spec:
                     type: string
                     description: |-
                       The name of the bucket to use.
+                  syncBucketSecret:
+                    type: boolean
+                    description: |-
+                      Whether to sync bucket secrets.
+                    default: true
