--- a/packages/sc-pgcluster/compositions/pgcluster/test/scenarios/standard/claim.yaml
+++ b/packages/sc-pgcluster/compositions/pgcluster/test/scenarios/standard/claim.yaml
@@ -61,6 +61,7 @@ spec:
   providerConfigsRef:
     scK8sProviderName: sc-kubernetes-provider
     ccK8sProviderName: kubernetes-provider
+    awsProviderName: aws-provider
 
   managementPolicies:
     - "*"
