fix: add nb version to claim

--- a/packages/sc-nboperatorinstall/compositions/nboperatorinstall/resources/definition.yaml
+++ b/packages/sc-nboperatorinstall/compositions/nboperatorinstall/resources/definition.yaml
@@ -76,3 +76,6 @@ spec:
                     operatorClusterName:
                       type: string
                       description: Cluster name for k8s operator.
+                    nbImageVersion:
+                      type: string
+                      description: Version of netbird image to use.
