fix: adding selectors

--- a/packages/gitlab/compositions/env-config/resources/definition.yaml
+++ b/packages/gitlab/compositions/env-config/resources/definition.yaml
@@ -82,7 +82,7 @@ spec:
                     type: string
                     description: |-
                       A comma separated list of environments to create.
-                  groupIdRef:
+                  groupName:
                     type: string
                     description: |-
                       The  reference to the gitlab group
