fix: expires at

--- a/packages/gitlab/compositions/env-config/resources/definition.yaml
+++ b/packages/gitlab/compositions/env-config/resources/definition.yaml
@@ -72,6 +72,10 @@ spec:
                     type: string
                     description: |-
                       A comma separated list of environments to create.
+                  expiresAt:
+                    type: string
+                    description: |-
+                      The date at which project's access token will expire. (e.g. 2024-12-31)
                   groupName:
                     type: string
                     description: |-
@@ -94,6 +98,7 @@ spec:
                           type: boolean
                         environmentScope:
                           type: string
+
 
 
 
