--- a/packages/gitlab/compositions/env-config/test/scenarios/standard/claim.yaml
+++ b/packages/gitlab/compositions/env-config/test/scenarios/standard/claim.yaml
@@ -8,6 +8,7 @@ spec:
     namespace: default
     environments: "test-repo1,test-repo2,test-repo3"
     groupName: "iac"
+    expiresAt: "2025-12-31T23:59:59Z"
     groupVariables:
       - key: "lokibucket"
         value: "my-mw-bucket"
