--- a/packages/gitlab/compositions/env-config/test/scenarios/standard/claim.yaml
+++ b/packages/gitlab/compositions/env-config/test/scenarios/standard/claim.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   parameters:
     namespace: default
+    argocdNamespace: argocd
     environments: "test-repo1,test-repo2,test-repo3"
     groupName: "iac"
     expiresAt: "2025-12-31T23:59:59Z"
