fix: adding status information for project

--- a/packages/gitlab/compositions/project/resources/definition.yaml
+++ b/packages/gitlab/compositions/project/resources/definition.yaml
@@ -301,4 +301,4 @@ spec:
                   defaultBranch:
                     type: string
                   id:
-                    type: string
+                    type: number
