fix: add token commit

--- a/packages/gitlab/compositions/env-config/resources/definition.yaml
+++ b/packages/gitlab/compositions/env-config/resources/definition.yaml
@@ -61,6 +61,11 @@ spec:
                     description: |-
                       The name of the provider config to use for the vault provider.
                     default: vault-provider
+                  httpProvider:
+                    type: string
+                    description: |-
+                      The name of the provider config to use for the http provider.
+                    default: http-conf
               parameters:
                 type: object
                 properties:
