--- a/packages/gitlab/compositions/env-config/test/scenarios/standard/claim.yaml
+++ b/packages/gitlab/compositions/env-config/test/scenarios/standard/claim.yaml
@@ -25,3 +25,4 @@ spec:
     gitlabProvider: gitlab-provider
     kubernetesProvider: kubernetes-provider
     vaultProvider: vault-provider
+    httpProvider: http-conf
