--- a/packages/gitlab/compositions/env-config/test/providers.yaml
+++ b/packages/gitlab/compositions/env-config/test/providers.yaml
@@ -19,3 +19,11 @@ metadata:
   name: provider-vault
 spec:
   package: ghcr.io/mojaloop/infra/upbound/provider-vault:v2.1.3
+---
+apiVersion: pkg.crossplane.io/v1
+kind: Provider
+metadata:
+  name: provider-http
+spec:
+  package: "xpkg.upbound.io/crossplane-contrib/provider-http:v1.0.10"
+  skipDependencyResolution: true
