--- a/packages/objectstores/compositions/ceph-bucket/resources/definition.yaml
+++ b/packages/objectstores/compositions/ceph-bucket/resources/definition.yaml
@@ -85,6 +85,12 @@ spec:
                         type: string
                         description: Maximum number of objects in the bucket
                         default: "10000"
+                      bucketPolicy:
+                        type: string
+                        description: Bucket policy in JSON format
+                      bucketLifecycle:
+                        type: string
+                        description: Bucket lifecycle policy in JSON format
                   secret:
                     type: object
                     description: |-
