feat: update bucketPolicy and bucketLifecycle to allow additional properties in JSON format

--- a/packages/objectstores/compositions/ceph-bucket/resources/definition.yaml
+++ b/packages/objectstores/compositions/ceph-bucket/resources/definition.yaml
@@ -87,13 +87,11 @@ spec:
                         default: "10000"
                       bucketPolicy:
                         type: object
-                        additionalProperties:
-                          type: string
+                        additionalProperties: true
                         description: Bucket policy in JSON format
                       bucketLifecycle:
                         type: object
-                        additionalProperties:
-                          type: string
+                        additionalProperties: true
                         description: Bucket lifecycle policy in JSON format
                   secret:
                     type: object
