--- a/packages/objectstores/compositions/ceph-bucket/resources/definition.yaml
+++ b/packages/objectstores/compositions/ceph-bucket/resources/definition.yaml
@@ -88,11 +88,11 @@ spec:
                       bucketPolicy:
                         type: object
                         additionalProperties: true
-                        description: Bucket policy in JSON format
+                        description: Bucket policy
                       bucketLifecycle:
                         type: object
                         additionalProperties: true
-                        description: Bucket lifecycle policy in JSON format
+                        description: Bucket lifecycle
                   secret:
                     type: object
                     description: |-
