refactor: simplify descriptions for bucketPolicy and bucketLifecycle

--- a/packages/objectstores/compositions/ceph-bucket/resources/definition.yaml
+++ b/packages/objectstores/compositions/ceph-bucket/resources/definition.yaml
@@ -87,11 +87,11 @@ spec:
                         default: "10000"
                       bucketPolicy:
                         type: object
-                        additionalProperties: true
+                        additionalProperties: {}
                         description: Bucket policy
                       bucketLifecycle:
                         type: object
-                        additionalProperties: true
+                        additionalProperties: {}
                         description: Bucket lifecycle
                   secret:
                     type: object
