feat: add bucketPolicy and bucketLifecycle parameters to CephBucket (#108)

--- a/packages/objectstores/compositions/ceph-bucket/resources/definition.yaml
+++ b/packages/objectstores/compositions/ceph-bucket/resources/definition.yaml
@@ -85,6 +85,14 @@ spec:
                         type: string
                         description: Maximum number of objects in the bucket
                         default: "10000"
+                      bucketPolicy:
+                        type: object
+                        x-kubernetes-preserve-unknown-fields: true
+                        description: Bucket policy
+                      bucketLifecycle:
+                        type: object
+                        x-kubernetes-preserve-unknown-fields: true
+                        description: Bucket lifecycle
                   secret:
                     type: object
                     description: |-
