--- a/packages/nb-config/compositions/zitadel-user-roles-syncer/resources/composition.yaml
+++ b/packages/nb-config/compositions/zitadel-user-roles-syncer/resources/composition.yaml
@@ -1,13 +1,13 @@
 apiVersion: apiextensions.crossplane.io/v1
 kind: Composition
 metadata:
-  name: zitadeluserrolesyncer
+  name: zitadelgitlabuserrolesyncer
   labels:
-    crossplane.io/xrd: xzitadeluserrolesyncer.nb.mojaloop.io
+    crossplane.io/xrd: xzitadelgitlabuserrolesyncer.nb.mojaloop.io
 spec:
   compositeTypeRef:
     apiVersion: nb.mojaloop.io/v1alpha1
-    kind: ZitadelUserRoleSyncer
+    kind: ZitadelGitlabUserRoleSyncer
   mode: Pipeline
   pipeline:
     - step: kcl
