--- a/packages/nb-config/compositions/zitadel-user-roles-syncer/resources/definition.yaml
+++ b/packages/nb-config/compositions/zitadel-user-roles-syncer/resources/definition.yaml
@@ -1,16 +1,16 @@
 apiVersion: apiextensions.crossplane.io/v1
 kind: CompositeResourceDefinition
 metadata:
-  name: xzitadelgitlabuserrolesyncer.nb.mojaloop.io
+  name: xzitadeluserrolesyncer.nb.mojaloop.io
 spec:
   defaultCompositeDeletePolicy: Foreground
   group: nb.mojaloop.io
   names:
-    kind: XZitadelGitlabUserRoleSyncer
-    plural: xzitadelgitlabuserrolesyncer
+    kind: XZitadelUserRoleSyncer
+    plural: xzitadeluserrolesyncer
   claimNames:
-    kind: ZitadelGitlabUserRoleSyncer
-    plural: zitadelgitlabuserrolesyncer
+    kind: ZitadelUserRoleSyncer
+    plural: zitadeluserrolesyncer
   versions:
     - name: v1alpha1
       served: true
