--- a/packages/nb-config/compositions/zitadel-user-roles-syncer/test/scenarios/default/claim.yaml
+++ b/packages/nb-config/compositions/zitadel-user-roles-syncer/test/scenarios/default/claim.yaml
@@ -1,5 +1,5 @@
 apiVersion: nb.mojaloop.io/v1alpha1
-kind: ZitadelUserRoleSyncer
+kind: XZitadelUserRoleSyncer
 metadata:
   name: example-zitadel-user-role-syncer
   namespace: testa
