fix: share data among compositions

--- a/packages/gitlab/compositions/zitadel-gitlab-user-roles-syncer/resources/definition.yaml
+++ b/packages/gitlab/compositions/zitadel-gitlab-user-roles-syncer/resources/definition.yaml
@@ -68,6 +68,16 @@ spec:
                     type: string
                     description: "Name of the project for resource naming"
 
+                  zitadelProjectConfigMap:
+                    type: object
+                    properties:
+                      name:
+                        type: string
+                        default: "gitlab-zitadel-project-config"
+                      namespace:
+                        type: string
+                        default: "crossplane-system"
+
                   # GitLab OIDC Secret (contains Zitadel credentials)
                   gitlabOidcSecret:
                     type: object
