--- a/packages/gitlab/compositions/zitadel-gitlab-user-roles-syncer/test/scenarios/default/claim.yaml
+++ b/packages/gitlab/compositions/zitadel-gitlab-user-roles-syncer/test/scenarios/default/claim.yaml
@@ -8,6 +8,9 @@ spec:
     zitadelUrl: https://zitadel.ccinfra1.drpp-onprem.global
     zitadelProjectName: gitlab
     gitlabGroupPath: iac
+    zitadelProjectConfigMap:
+      name: gitlab-zitadel-project-config
+      namespace: gitlab
     gitlabOidcSecret:
       name: gitlab-oidc-secret
       namespace: gitlab
