--- a/packages/nb-config/compositions/oidc/test/providers.yaml
+++ b/packages/nb-config/compositions/oidc/test/providers.yaml
@@ -12,3 +12,10 @@ metadata:
   name: provider-kubernetes
 spec:
   package: ghcr.io/mojaloop/infra/crossplane-contrib/provider-kubernetes:v0.18.0
+---
+apiVersion: pkg.crossplane.io/v1
+kind: Provider
+metadata:
+  name: provider-http
+spec:
+  package: "xpkg.upbound.io/crossplane-contrib/provider-http:v1.0.11"
