--- a/packages/nb-config/compositions/oidc/resources/composition.yaml
+++ b/packages/nb-config/compositions/oidc/resources/composition.yaml
@@ -1,15 +1,16 @@
 apiVersion: apiextensions.crossplane.io/v1
 kind: Composition
 metadata:
-  name: zitadeluserrolesyncer
+  name: netbirdoidc
   labels:
-    crossplane.io/xrd: xzitadeluserrolesyncer.nb.mojaloop.io
+    crossplane.io/xrd: xnetbirdoidc.netbird.mojaloop.io
 spec:
   compositeTypeRef:
-    apiVersion: nb.mojaloop.io/v1alpha1
-    kind: XZitadelUserRoleSyncer
+    apiVersion: netbird.mojaloop.io/v1alpha1
+    kind: XNetbirdOIDC
   mode: Pipeline
   pipeline:
+
     - step: kcl
       functionRef:
         name: function-kcl
