--- a/packages/zitadel-config/compositions/post-config-init/test/scenarios/standard/claim.yaml
+++ b/packages/zitadel-config/compositions/post-config-init/test/scenarios/standard/claim.yaml
@@ -5,12 +5,12 @@ metadata:
 spec:
   parameters:
     # Required parameters
-    domain: "zitadel.example.com"
+    domain: "zitadel.ccinfra05.drpp-onprem.global"
     zitadelAdminSecret:
       name: "zitadel-admin-sa"
       key: "zitadel-admin-sa.json"
     zitadelInitOutputSecret:
-      name: "zitadel-post-config-init-output"
+      name: "zitadel-org-id-secret"
       key: "zitadel_org_id"
 
 
