--- a/packages/zitadel-config/compositions/post-config-init/resources/definition.yaml
+++ b/packages/zitadel-config/compositions/post-config-init/resources/definition.yaml
@@ -63,6 +63,10 @@ spec:
                     type: string
                     description: |-
                       The namespace of zitadel instance.
+                  serviceAccountName:
+                    type: string
+                    description: |-
+                      The name of the service account to use for the post config init job, which can create secrets in zitadel namespace
                   zitadelAdminSecret:
                     type: object
                     properties:
