--- a/packages/zitadel-config/compositions/post-config-init/test/scenarios/standard/claim.yaml
+++ b/packages/zitadel-config/compositions/post-config-init/test/scenarios/standard/claim.yaml
@@ -4,8 +4,9 @@ metadata:
   name: zitadel-post-config-init
 spec:
   parameters:
-    # Required parameters
     domain: "zitadel.ccinfra05.drpp-onprem.global"
+    serviceAccountName: "zitadel-secret-creator"
+    namespace: "zitadel"
     zitadelAdminSecret:
       name: "zitadel-admin-sa"
       key: "zitadel-admin-sa.json"
