fix: correcting role and role binding

--- a/packages/zitadel-config/compositions/post-config-init/test/scenarios/standard/claim.yaml
+++ b/packages/zitadel-config/compositions/post-config-init/test/scenarios/standard/claim.yaml
@@ -1,7 +1,7 @@
 apiVersion: zitadel.mojaloop.io/v1alpha1
 kind: XZitadelPostConfigInit
 metadata:
-  name: zitadel-post-config-init
+  name: postconfig-init
 spec:
   parameters:
     domain: "zitadel.ccinfra05.drpp-onprem.global"
